SQLoco - A C++ wrapper for SQL libraries

Version 0.53
------------
- Changed basic_string<>::clear() to basic_string::erase() for broader compiler
  support.
- Adding much needed documentation.
- Adding more 'convenience' functions.

Version 0.52
------------
- Added two new forms of execute for simplified programming.
- Number parameters are no longer wrapped in quotes.
- Fixed bug in statement::fetch under MySQL that would cause a crash if fetch
  is called after a failed execute.
- Added statement::fetchhash for fetching row into a hash.
- Added statement::isnull to check for null values after fetch.

Version 0.51
------------
- Modified configure to better detect MySQL directory, and source files
  accordingly.
- Began laying framework for Postgresql support.

Version 0.50
------------
- First working version with MySQL support.
