@@ -15,3 +15,5 @@ This version supports:
 
 MySQL
 
+Note:
+This is Beta code.  Be aware that the API may change before the final release.
